# jamsite

./: .gitignore  CLAUDE.md  CURRENT.md  Dockerfile  Makefile  README.md  ROADMAP.md  TESTING.md  deploy.sh  docker-compose.yaml  entrypoint.sh  jamsite.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  search_indexer.py  song.py  trie.py  webpack.config.js
.cursor/rules/: jamsite-rules.mdc  offline.mdc
css/: custom.css  jamulus.css
google_api/: auth.py
jamsite/: artists.py  broadcast.py  check.py  jamsite.py  musicbrainz.py  recording_lookup.py  search_indexer.py  song.py  store.py  trie.py
jamsite/css/: custom.css  dark_mode.css  jamulus.css  menu.css  offline.css  pdf_viewer.css
jamsite/google_api/: auth.py
jamsite/js/: broadcast.js  diagnostics.js  filter.js  menu.js  offline_preferences.js  pdf.min.js  pdf_viewer.js  playlist.js  qr_code.js  random.js  search.js  service_worker.js  song_actions.js  song_table.js  sync_worker.js  viewer_preferences.js
jamsite/templates/: index.html  reset.html  viewer.html
js/: jamulus_server.js  random.js  search.js  song_table.js  sort_popover.js
nginx/: development.conf  nginx.conf  production.conf
src/: viewer.js
templates/: index.html  jamulus.html  titles.html
tests/: test_artists.py  test_check.py  test_jamsite.py  test_musicbrainz.py  test_recording_lookup.py  test_search_indexer.py  test_song.py  test_template.py
tests/e2e/: broadcast.spec.js  cache-busting.spec.js  filters.spec.js  helpers.js  page-load.spec.js  playlist.spec.js  random.spec.js  (+5 more)
