[project]
name = "jamsite"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "google-api-python-client>=2.122.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "jinja2>=3.1.3",
    "boto3>=1.34.65",
    "nltk>=3.8.1",
    "unidecode>=1.3.8",
    "dropbox>=11.36.2",
    "setuptools>=69.2.0",
    "gotenberg-client>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.0.0",
]

[project.scripts]
jamsite = "jamsite.jamsite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
